src/portfolio/components/main/_mainContent.scss
@use '../../../sass/functions' as f;
@use '../../scss/portfolioStyles' as m;

.mainContent {
  width: 100vw;
  height: 100%;
  max-height: 76vh;
  overflow: visible;
  &:hover {
    cursor: grab;
  }
  &:active {
    cursor: grabbing;
  }
  &__track {
    display: flex;
    width: max-content;
    height: inherit;
    max-height: inherit;
    padding: 0 m.$box-model-viewport-x;
    &.smoothen {
      transition: transform 360ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
    }
  }
}

.project {
  height: inherit;
  max-height: inherit;
  aspect-ratio: 1.99/1;
  will-change: width;
  background-color: m.$background-color-transparent-fallback;
  transition:
    filter 350ms ease-in-out,
    transform 350ms ease-in-out,
    transform-origin 350ms ease-in-out;
  &[data-status='disabled'] {
    transform: scale(0.8);
    transform-origin: bottom;
    filter: grayscale(85%) sepia(80%) brightness(65%) opacity(80%);
  }
  & a {
    display: block;
    height: inherit;
    max-height: inherit;
    & figure,
    & picture {
      display: contents;
      & picture img {
        filter: brightness(92%);
      }
    }
  }
}

